src/styles.css
body
{
	margin: 0;
	font-family: Montserrat;
}

#header
{
	position:fixed;
	width:100%;
	top:0;
	left:0;

	box-shadow: 0vmin 0vmin 0.8vmin #222222;
	background-color: #500076;
	color: white;
	z-index:5;

	text-align: center;
}

.headerLeft
{
	width: 15vmin;
	display:inline-block;
	font-size: 5vmin;
	text-align:left;
	padding-left:2vmin;
}

.headerMiddle
{
	width: calc(100% - 34vmin);
	display:inline-block;
}

.headerRight
{
	width: 15vmin;
	display:inline-block;
	font-size: 5vmin;
	text-align:right;
	padding-right:2vmin;
}

#header h1
{
	margin:0;
	padding:0;
	vertical-align:middle;
	font-size: 5vmin;
}

#header a
{
	color: white;
	text-decoration: none;
}

#mainFrame
{
	background-color: #ebebeb;
	box-shadow: 0vmin 0vmin 0.4vmin #222222;
	margin: 5vmin;
	padding-bottom: 2vmin;
	border-radius: 1vmin;
}

#content
{
	padding-top: 3em;
}

#footer
{
	font-size: 1.8vmin;
	text-align: center;
	padding: 2.5vmin;
	border-top: #C5C5C5 0.2vmin solid;
	margin-top: 6vmin;
}

hr
{
	border-top: #C5C5C5 0.2vmin solid;
	margin-top: 4vmin;
	margin-bottom: 5vmin;
}

a
{
	color:#464646;
	text-decoration: underline;
}

h2
{
	font-size: 3vmin;
	text-align: center;
	padding:2vmin;
	margin:0;
}

.simpleText
{
	text-align: justify;
	text-justify: inter-word;
	font-size: 2vmin;
	padding-left:2vmin;
	padding-right:2vmin;
}

.ltr
{
	text-align: left;
}
.rtl
{
	text-align: right;
}

.shareText
{
	margin-top:5vmin;
	margin-bottom:5vmin;
	text-align: center;
	text-justify: inter-word;
	font-size: 2vmin;
	padding-left:2vmin;
	padding-right:2vmin;
}

.columnContainer
{
	position: relative;
}
.columnLeft
{
	float: left;
	width: 100%;
}
.columnRight
{
	float: left;
	width: 100%;
	margin-bottom: 4vmin;
}
@media screen and (min-width: 80em )
{
	.columnLeft
	{
		width: 50%;
	}
	.columnRight
	{
		width: 50%;
	}
}

.axisEnd
{
	display: inline-block;
	width:15vmin;
	height: 15vmin;
	vertical-align: middle;
	z-index: 3;
	position:relative;
}
.axisEnd > img
{
	width:100%;
	position: relative;
	left: 5vmin;
}
.axisEndLeft > img
{
	left: 2vmin;
}
.axisEndRight > img
{
	left: -2vmin;
}
.axisProgress
{
	display: inline-block;
	width:calc(100% - 30vmin);
	height: 15vmin;
	vertical-align: middle;
}
.axisSubProgress
{
	display: inline-block;
	height:5vmin;
	margin-top:5vmin;
	color: white;
	font-size: 3.2vmin;
	box-shadow: 0vmin 0vmin 0.4vmin #222222;
	z-index: 2;
	position:relative;
}
.axisSubProgress span
{
	display: inline-block;
	vertical-align: middle;
	padding-left: 1.1vmin;
	padding-right: 1.1vmin;
}

.questionBox
{
	display: table;
	text-align: center;
    margin-top: 5vmin;
    margin-bottom: 5vmin;
    margin-left: auto;
    margin-right: auto;
	padding:4vmin;
	height: 10vmin;
}
.questionBox div
{
	display: table-cell;
	vertical-align: middle;
	font-size: 2vmin;
}
.description
{
	margin:2vmin;
	margin-top:3vmin;
}
.descText, .descTextMono
{
	display: inline-block;

	text-align: justify;
	vertical-align: top;
	text-justify: inter-word;
	font-size: 2vmin;
}
.descText
{
	width:calc(100% - 30vmin);
}
.descTextMono
{
	width:calc(100% - 15vmin);
}
.descImg
{
	display: inline-block;
}
.descImg img
{
	width:15vmin;
	height: 15vmin;
}

.axisDescLeft, .axisDescRight
{
	width:50%;
	display: inline-block;
	position: relative;
	top: 4vmin;
	z-index: 4;
	font-size:2.5vmin;
}
.axisDescLeft
{
	text-align:left;
}
.axisDescRight
{
	text-align:right;
}
.axisDescLeft p
{
	margin:0;
	margin-left: 16vmin;
}
.axisDescRight p
{
	margin:0;
	margin-right: 16vmin;
}
.axisNeutral
{
	background-color: #ebebeb;
	color: black;
	text-align: center;
	z-index: 1;
	position:relative;
}
.axisConstructivism
{
	background-color: #a425b6;
	text-align: right;
}
.axisEssentialism
{
	background-color: #34b634;
	text-align: left;
}
.axisInternationalism
{
	background-color: #3e6ffd;
	text-align: right;
}
.axisNationalism
{
	background-color: #ff8500;
	text-align: left;
}
.axisCommunism
{
	background-color: #cc0000;
	text-align: right;
}
.axisCapitalism
{
	background-color: #ffb800;
	text-align: left;
}
.axisProgressivism
{
	background-color: #850083;
	text-align: right;
}
.axisConservatism
{
	background-color: #970000;
	text-align: left;
}
.axisEcology
{
	background-color: #a0e90d;
	text-align: right;
}
.axisProductivism
{
	background-color: #4deae9;
	text-align: left;
}
.axisJusticeSoft
{
	background-color: #14bee1;
	text-align: right;
}
.axisJusticeHard
{
	background-color: #e6cc27;
	text-align: left;
}
.axisRegulation
{
	background-color: #269B32;
	text-align: right;
}
.axisLaissezFaire
{
	background-color: #6608C0;
	text-align: left;
}
.axisRevo
{
	background-color: #eb1a66;
	text-align: right;
}
.axisRefo
{
	background-color: #0ee4c8;
	text-align: left;
}

.bonusList
{
	text-align:center;
}
.bonus
{
	width:15vmin;
	height: 15vmin;
}

.navButtons
{
	margin-top:5vmin;
	margin-bottom:5vmin;
	margin-left:auto;
	margin-right:auto;
	width:40vmin;
}

.buttonQuestion, .button
{
	text-align: center;
	width:100%;
	margin-top: 0;
	margin-bottom: 1vmin;
	padding-top:1vmin;
	padding-bottom:1vmin;
	display: inline-block;
	border: none;
	border-radius: 0.5vmin;
	font-size: 2.5vmin;
	text-decoration: none;

	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition: .5s;

	color: white;
}
/* repetition to increase specificity so that it's not overridden by nth-child */
.buttonQuestion:hover:hover, .button:hover
{
	background-color: white;
}

.button:hover
{
	color: #500076;
}
.button
{
	background-color: #500076;
}

.buttonQuestion:nth-child(1):hover
{
	color: #1b5e20;
}
.buttonQuestion:nth-child(1)
{
	background-color: #1b5e20;
}
.buttonQuestion:nth-child(2):hover
{
	color: #4caf50;
}
.buttonQuestion:nth-child(2)
{
	background-color: #4caf50;
}
.buttonQuestion:nth-child(3):hover
{
	color: #bbbbbb;
}
.buttonQuestion:nth-child(3)
{
	background-color: #bbbbbb;
}
.buttonQuestion:nth-child(4):hover
{
	color: #f44336;
}
.buttonQuestion:nth-child(4)
{
	background-color: #f44336;
}
.buttonQuestion:nth-child(5):hover
{
	color: #b71c1c;
}
.buttonQuestion:nth-child(5)
{
	background-color: #b71c1c;
}

.buttonTwitter
{
	background-color: #00aced;
	color: white;
	width: calc(25% - 0.5vmin);
	margin-right: 0.5vmin;
}
.buttonTwitter:hover
{
	color: #00aced;
}
.buttonFacebook
{
	background-color: #3B5998;
	color: white;
	width: calc(25% - 1vmin);
	margin-left: 0.5vmin;
	margin-right: 0.5vmin;
}
.buttonFacebook:hover
{
	color: #3B5998;
}
.buttonReddit
{
	background-color: #ff5700;
	color: white;
	width: calc(25% - 1vmin);
	margin-left: 0.5vmin;
	margin-right: 0.5vmin;
}
.buttonReddit:hover
{
	color: #ff5700;
}
.buttonLink
{
	background-color: #500076;
	color: white;
	width: calc(25% - 0.5vmin);
	margin-left: 0.5vmin;
}
.buttonLink:hover
{
	color: #500076;
}
.buttonLinkGood
{
	background-color: #0EB31A;
	color: white;
	width: calc(25% - 0.5vmin);
	margin-left: 0.5vmin;
}
.buttonLinkGood:hover
{
	background-color: #0EB31A;
	color: white;
}

.flagDecoration
{
	text-align:center;
}
.flagDecoration canvas
{
	border: solid 1px grey;
	max-width: 70vmin;
}
.generatedResultsDecorations
{
	text-align:center;
}
.generatedResultsDecorations canvas
{
	border: solid 1px grey;
	max-width: 70vmin;
}
#slogan
{
	padding-top: 3vmin;
	font-size: 4.3vmin;
}
.urlToCopyContainer
{
	width:100%;
	text-align:center;
	font-size: 2vmin;
}
.urlToCopy
{
	width:50vmin;
	background-color: white;
	display:inline-block;
	padding:1vmin;
	z-index:6;
	border-radius:1vmin;
}

